# incident-agent-bench

./: .gitignore  COMPLETION_REPORT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: benchmark-report.html  benchmark.json  demo-report.html
docs/: architecture.md
scenarios/: benign_admin.json  impossible_travel.json  malicious_powershell.json
src/incident_agent_bench/: __init__.py  cli.py  environment.py  evaluation.py  models.py  policies.py  reporting.py  runner.py  scenario.py
tests/: test_benchmark.py  test_cli.py
