[project]
name = "incident-agent-bench"
version = "0.1.0"
description = "A deterministic benchmark for safe, replayable incident-response agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Fahad Shaik"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.9", "mypy>=1.14"]

[project.scripts]
incident-bench = "incident_agent_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/incident_agent_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/incident_agent_bench/reporting.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=incident_agent_bench --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
